# retailsynth-agentsim

./: .gitignore  CODEOWNERS  LICENSE  README.md  dockerfile  pyproject.toml
examples/: paper_result_analysis.ipynb  paper_result_analysis.md  quickstart.ipynb  quickstart.md
src/retail_agent/: __init__.py
src/retail_agent/agents/: __init__.py  dqn.py  fixed_arm.py  linear_thompson_sampling_agent.py  linear_ucb.py  neural_boltzmann.py  ppo.py
src/retail_agent/envs/: cb_retail_env.py  features.py  retail_env.py  retail_synthesizer.py
src/retail_agent/utils/: job_util.py  metric_util.py  segment_util.py  storage_util.py  train_eval_util.py  trajectory_util.py  viz_util.py
tests/: conftest.py
tests/cfg/: agent_training.yaml  optuna_tuning.yaml
tests/cfg/agent/: fixed_arm.yaml  linear_ucb.yaml  random.yaml
tests/cfg/cloud/: aws.yaml
tests/cfg/hydra/job_logging/: custom.yaml
tests/cfg/optuna/: linear_ucb.yaml
tests/cfg/pyenv/: 3c10.yaml
tests/cfg/synthetic_data/: test.yaml
tests/env/: cb_env_test.py  retailsynth_env_test.py
tests/fixtures/: env_fixture_test.py
tests/utils/: storage_util_test.py
workflow/: README.md  ablation_study.sh  main.py  optuna_job.py  optuna_main.py  workflow_aws.sh  workflow_local.sh
workflow/aws_batch_template/: compute_environment.json  job_definition.json  job_queue.json
workflow/cfg/: README.md  agent_training.yaml  optuna_tuning.yaml
workflow/cfg/agent/: dqn.yaml  linear_ts.yaml  linear_ucb.yaml  neural_boltzmann.yaml  ppo.yaml  random.yaml
workflow/cfg/cloud/: aws.yaml
workflow/cfg/optuna/: dqn.yaml  linear_ts.yaml  linear_ucb.yaml  neural_boltzmann.yaml  ppo.yaml
workflow/cfg/pyenv/: 11c50.yaml
workflow/cfg/synthetic_data/: hfhd.yaml  no_marketing.yaml
